--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_spinkit: ^5.2.0
   google_fonts: ^6.1.0
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.4
 
 dev_dependencies:
   flutter_test:
