--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   razorpay_flutter: ^1.3.6
   fluttertoast: ^8.2.4
+  timelines: ^0.1.0
 
 dev_dependencies:
   flutter_test:
