--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   google_fonts: ^6.1.0
   firebase_auth: ^4.16.0
   firebase_core: ^2.24.2
+  email_otp: ^2.1.2
+  image_picker: ^1.0.7
+  flutter_datetime_picker: ^1.5.1
+  intl: ^0.19.0
 #  firebase_core: ^2.25.4
 #  firebase_auth: ^4.17.4
 
