--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   image_picker: ^1.0.7
   flutter_datetime_picker: ^1.5.1
   intl: ^0.19.0
+  firebase_storage: ^11.6.5
+  path: ^1.8.3
 #  firebase_core: ^2.25.4
 #  firebase_auth: ^4.17.4
 
