--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,12 +44,20 @@ dependencies:
   google_fonts: ^6.1.0
   firebase_auth: ^4.16.0
   firebase_core: ^2.24.2
+  flutter_launcher_icons: ^0.13.1
 #  firebase_core: ^2.25.4
 #  firebase_auth: ^4.17.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/appIcon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -70,8 +78,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-#  assets:
-#     - assets/images/BlackClover.jpg
+  assets:
+    - assets/appIcon.png
 #     - assets/images/1311181.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
