--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^6.1.0
   firebase_auth: ^4.16.0
   firebase_core: ^2.24.2
+  flutter_local_notifications: ^16.3.2
 #  firebase_core: ^2.25.4
 #  firebase_auth: ^4.17.4
 
