--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
 
   firebase_storage: ^11.6.0
   intl: ^0.19.0
+  flutter_launcher_icons: ^0.13.1
 
 
 #  firebase_core: ^2.25.4
@@ -59,6 +60,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/appIcon.png"
 
 
 
@@ -84,6 +92,8 @@ flutter:
   assets:
      - assets/login.png
      - assets/signup.png
+     - assets/apple.jpg
+     - assets/appicon.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
